# rust_kifuwarabe_shogi_server

./: Cargo.toml  README.md  csa-protocol-diagram.json  diagram.json  graph.json
src/: #memo.txt  client_handle_impl.rs  main.rs  server_controller_impl.rs  server_diagram_impl.rs  server_impl.rs  shell_impl.rs
src/details/: client_handle_impl_detail.rs  mod.rs  server_impl_detail.rs
src/models/: game.rs  game_summary.rs  mod.rs  player.rs  shell_var.rs
src/utils/: game_utils.rs  lobby_utils.rs  mod.rs  player_map_utils.rs  player_utils.rs  shell_map_utils.rs  shell_var_utils.rs  some_utils.rs
