[package]
name = "rust_kifuwarabe_shogi_server"
version = "0.1.0"
authors = ["むずでょ <muzudho1@gmail.com>"]

[dependencies]
lazy_static = "1.1.0"
serde_json = "1.0"

[dependencies.kifuwarabe_server]
git = "https://github.com/muzudho/rust_kifuwarabe_server.git"
rev = "d07867f5051c84c4ddcc839f7f76585fc1e17e72"

[dependencies.kifuwarabe_shell]
git = "https://github.com/muzudho/rust_kifuwarabe_shell.git"
rev = "f1cd2bf0d3f51ed4db334fffe77931d7e760c069"

[dependencies.kifuwarabe_state_transition_diagram]
git = "https://github.com/muzudho/rust_kifuwarabe_state_transition_diagram.git"
rev = "aede7bdfe0925a4c260ac19c6355d64469be9b50"
